--- a/angular.json
+++ b/angular.json
@@ -33,10 +33,25 @@
               "node_modules/ngx-spinner/animations/ball-scale-multiple.css"
             ],
             "scripts": [
+              "node_modules/jquery/dist/jquery.min.js",
+              "node_modules/bootstrap/dist/js/bootstrap.bundle.min.js"
             ]
           },
           "configurations": {
             "production": {
+              "fileReplacements": [
+                {
+                  "replace": "src/environments/environment.ts",
+                  "with": "src/environments/environment.production.ts"
+                }
+              ],
+              "optimization":true,
+              "outputHashing":"all",
+              "sourceMap":false,
+              "namedChunks":false,
+              "extractLicenses":true,
+              "vendorChunk":false,
+              "buildOptimizer":true,
               "budgets": [
                 {
                   "type": "initial",
@@ -48,8 +63,7 @@
                   "maximumWarning": "2kb",
                   "maximumError": "4kb"
                 }
-              ],
-              "outputHashing": "all"
+              ]
             },
             "development": {
               "buildOptimizer": false,
