--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "@angular/router": "^16.1.0",
     "bootstrap": "^5.3.2",
     "bootstrap-icons": "^1.11.1",
+    "jquery": "^3.7.1",
     "ng2-currency-mask": "^13.0.3",
     "ngx-spinner": "^16.0.2",
     "rxjs": "~7.8.0",
